@@ -1,3 +1,9 @@
+Tue Jun 29 14:41:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* file.c (rb_realpath_internal, realpath_rec): skip UNC share root
+	  on DOSISH platforms.
+	  http://pc12.2ch.net/test/read.cgi/tech/1272248179/600
+
 Tue Jun 29 06:41:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter (fix
